<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/rowTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rowTitle"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#3F51B5" />

    <TextView
        android:id="@+id/rowGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rowGenre"
        android:textColor="#3F51B5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/rowYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/rowYear" />

        <ImageView
            android:id="@+id/imageRating"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="0"
            app:srcCompat="@drawable/ic_launcher_background" />

    </LinearLayout>

</LinearLayout>